--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+
+*{
+    margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-main{
+    width: 500px;
+    height: 400px;
+    border: 1px solid #000000;
+
+}
+.navigation{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    padding-left: 20px;
+    box-shadow: 0px 3px 5px #888888;
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-tabs{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header-tabs li{
+    padding: 0px 15px;
+    list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.react-logo{
+    width: 90px;
+    height: 90px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-content{
+    padding-left: 20px;
+    height: 200px;
+}
+
+.main-content h1{
+    padding: 20px 0px;
+}
+
+
+.footer{
+    display: flex;
+    align-items: center;
+    height: 100px;
+    background-color: #6FAACA;
+    border-top: 0.5px solid #000000;
+    padding-left: 20px;
 }
