--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,11 @@
     display: flex;
     align-items: center;
     height: 100px;
-    background-color: #6FAACA;
+    background-color: #135d85;
     border-top: 0.5px solid #000000;
     padding-left: 20px;
+}
+
+.footer{
+    color: #ffffff;
 }
